# tema-bpda

./: .gitignore  Cargo.toml  README.md
meta/: Cargo.toml
scenarios/: tema_1.scen.json
scripts/: build.sh  cancel_slot.sh  config.sh  confirm_slot.sh  contract_address.txt  create_additional_wallet.sh  create_football_slot.sh  create_wallet.sh  deploy.sh  participate_slot.sh  pay_court.sh  query_cost.sh  query_manager.sh  query_participants.sh  query_slot.sh  set_cost.sh  set_manager.sh  wallet.pem
scripts/wallets/: 0.pem  1.pem
src/: tema_1.rs
tests/: tema_1_scenario_go_test.rs  tema_1_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
